2000-07-31  Bruno Haible  <haible@clisp.cons.org>

	* intl/plural.y: Include config.h. Needed to define 'inline' away for
	C compilers that don't support it.
	(yylex): Don't use gcc specific case range syntax.
	* intl/loadmsgcat.c (INIT_GERMANIC_PLURAL): New macro, for old
	compilers.

2000-10-12  Bruno Haible  <haible@clisp.cons.org>

	* intl/finddomain.c: Remove unneeded includes.

2000-10-12  Bruno Haible  <haible@clisp.cons.org>

	* intl/localealias.c (memcpy): Return first argument, just like the
	real memcpy function does.
	* intl/bindtextdom.c (memcpy): Likewise.
	* intl/finddomain.c (memcpy): Likewise.
	* intl/l10nflist.c (memcpy): Likewise.
	* intl/textdomain.c (memcpy): Likewise.
	From Paul Eggert <eggert@twinsun.com>.

2001-01-03  Jakub Jelinek  <jakub@redhat.com>

	* resolv/resolv.h (struct __res_state): Add nsinit field.
	* resolv/res_send.c (res_nsend): Use it instead of nscount.
	* resolv/res_init.c (__res_vinit): Initialize it.
	(res_nclose): Clear it instead of nscount.

2001-01-04  Ulrich Drepper  <drepper@redhat.com>

	* malloc/mtrace.pl: Fix matching of addresses.
	Patch by Aharon Robbins <arnold@skeeve.com>.

	* Versions.def (ld): Add GLIBC_2.2.

	* catgets/gencat.c: Copyright 2001.
	* csu/version.c: Likewise.
	* debug/catchsegv.sh: Likewise.
	* debug/xtrace.sh: Likewise.
	* elf/ldconfig.c: Likewise.
	* elf/sprof.c: Likewise.
	* iconv/iconv_prog.c: Likewise.
	* locale/locale.c: Likewise.
	* locale/localedef.c: Likewise.
	* malloc/memusage.sh: Likewise.
	* malloc/mtrace.pl: Likewise.
	* nscd/nscd.c: Likewise.
	* posix/getconf.c: Likewise.

2001-01-04  Mark Kettenis  <kettenis@gnu.org>

	* include/stdio.h: Only provide __getwc_unlocked prototype if
	USE_IN_LIBIO is defined.

2001-01-04  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/socket.S (__socket): Fix error code
	handling.

2001-01-03  Andreas Schwab  <schwab@suse.de>

	* sysdeps/generic/strtoll.c: Remove unused __strtoq_internal alias.